feat(backend): 新增在线客服聊天模块及消息模块增强
- 新增 chat 模块：ChatController/ChatService/ChatServiceImpl，支持用户发送文字/商品卡片/图片消息、商家回复、聊天记录分页、未读计数、全部已读
- 新增 ChatMessage 实体、ChatMessageMapper、ChatSendDto、ChatMessageVO、ChatUserVO
- 新增 chat_message 建表 SQL（含 user_id/sender_type/msg_type/images 等字段及索引）
- MessageController 新增消息详情接口 getMessage、分类未读数接口 getUnreadCounts
- MessageService/Impl 增强：markAllRead 支持 type 过滤、新增 getUnreadCounts 按类型统计未读、applyTypeFilter 统一类型过滤逻辑（type=2 时包含 2/4 物流类）
- 修复 MessageServiceImpl 中 toList() 返回不可变列表导致的 Redis 缓存反序列化问题，改用 Collectors.toList()/Collectors.toCollection(ArrayList::new)